--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -56,16 +56,60 @@
 
 .mostrar-clima-detalle {
     width: 350px;
-    height: 195px;
+    height: 196px;
+    background: #E7F0FF;
+    box-shadow: 0px 12px 10px rgba(0, 0, 0, 0.17);
+    border-radius: 5px;
     position: absolute;
     top:32px;
     left: 0;
-    background-image: url(../images/tiempo.png);
+    /* background-image: url(../images/tiempo.png);
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: top center; */
+    padding: 20px 28px 20px 20px;
     display: none;
     &.active {
         display: block;
+    }
+    .box-texto-clima {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .numero-grados {
+            color: $blue;
+            font-weight: 300;
+            font-size: 43px;
+            line-height: 23px;
+        }
+    }
+    .box-info-clima {
+        .lista-clima {
+            list-style: none;
+            li {
+                color: $blue-dark;
+                font-size: 11px;
+                line-height: 17px;
+                &:first-child {
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+}
+
+.box-enlace-clima {
+    border-top: 1px solid #8FB9FF;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 10px;
+    margin-top: 10px;
+    p {
+        color: $blue;
+        font-weight: bold;
+        font-size: 11px;
+        line-height: 17px;
+        width: 200px;
     }
 }
 
