add seach event

--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -176,14 +176,31 @@
     position: absolute;
     top:102px;
     left: 0;
-    background-image: url(../images/buscador.png);
-    background-repeat: no-repeat;
-    background-position: top center;
     z-index: 101;
     display: none;
+    /* opacity:0;
+    transition:opacity .4s ease-in; */
+    background-color: #FFFFFF;
+    border: 0.5px solid #BDBDBD;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    padding: 18px 38px;
     &.active {
         display: block;
+        /* opacity:1; */
     }
+    .input-busqueda {
+        padding: 0.6rem 0.75rem;
+    }
+}
+
+.title-busqueda {
+    color: $blue-dark;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 8px;
 }
 
 /* Nav Menu */
