--- a/css/main.css
+++ b/css/main.css
@@ -3427,14 +3427,33 @@ body {
   position: absolute;
   top: 102px;
   left: 0;
-  background-image: url(../images/buscador.png);
-  background-repeat: no-repeat;
-  background-position: top center;
   z-index: 101;
   display: none;
+  /* opacity:0;
+  transition:opacity .4s ease-in; */
+  background-color: #FFFFFF;
+  border: 0.5px solid #BDBDBD;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  padding: 18px 38px;
 }
 .mostrar-busqueda.active {
   display: block;
+  /* opacity:1; */
+}
+.mostrar-busqueda .input-busqueda {
+  padding: 0.6rem 0.75rem;
+}
+
+.title-busqueda {
+  color: #003287;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 8px;
 }
 
 /* Nav Menu */
